// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/Pluggable should match snapshot with extended component 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PopoverSection1": Array [
        Object {
          "component": [Function],
          "id": "",
          "pluginId": "",
        },
      ],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableName="PopoverSection1"
  theme={
    Object {
      "awayIndicator": "#ffbc1f",
      "buttonBg": "#1c58d9",
      "buttonColor": "#ffffff",
      "centerChannelBg": "#ffffff",
      "centerChannelColor": "#3f4350",
      "codeTheme": "github",
      "dndIndicator": "#d24b4e",
      "errorTextColor": "#d24b4e",
      "linkColor": "#386fe5",
      "mentionBg": "#ffffff",
      "mentionBj": "#ffffff",
      "mentionColor": "#1e325c",
      "mentionHighlightBg": "#ffd470",
      "mentionHighlightLink": "#1b1d22",
      "newMessageSeparator": "#cc8f00",
      "onlineIndicator": "#3db887",
      "sidebarBg": "#1e325c",
      "sidebarHeaderBg": "#192a4d",
      "sidebarHeaderTextColor": "#ffffff",
      "sidebarTeamBarBg": "#162545",
      "sidebarText": "#ffffff",
      "sidebarTextActiveBorder": "#5d89ea",
      "sidebarTextActiveColor": "#ffffff",
      "sidebarTextHoverBg": "#28427b",
      "sidebarUnreadText": "#ffffff",
      "type": "Denim",
    }
  }
>
  <PluggableErrorBoundary
    key="PopoverSection1"
    pluginId=""
  >
    <ProfilePopoverPlugin
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#162545",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      webSocketClient={
        WebSocketClient {
          "closeCallback": null,
          "closeListeners": Set {},
          "conn": null,
          "connectFailCount": 0,
          "connectionId": "",
          "connectionUrl": null,
          "errorCallback": null,
          "errorListeners": Set {},
          "eventCallback": null,
          "firstConnectCallback": null,
          "firstConnectListeners": Set {},
          "messageListeners": Set {},
          "missedEventCallback": null,
          "missedMessageListeners": Set {},
          "postedAck": false,
          "reconnectCallback": null,
          "reconnectListeners": Set {},
          "responseCallbacks": Object {},
          "responseSequence": 1,
          "serverSequence": 0,
        }
      }
    >
      <span
        id="pluginId"
      >
        ProfilePopoverPlugin
      </span>
    </ProfilePopoverPlugin>
  </PluggableErrorBoundary>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with extended component with pluggableName 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PopoverSection1": Array [
        Object {
          "component": [Function],
          "id": "",
          "pluginId": "",
        },
      ],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableName="PopoverSection1"
  theme={
    Object {
      "awayIndicator": "#ffbc1f",
      "buttonBg": "#1c58d9",
      "buttonColor": "#ffffff",
      "centerChannelBg": "#ffffff",
      "centerChannelColor": "#3f4350",
      "codeTheme": "github",
      "dndIndicator": "#d24b4e",
      "errorTextColor": "#d24b4e",
      "linkColor": "#386fe5",
      "mentionBg": "#ffffff",
      "mentionBj": "#ffffff",
      "mentionColor": "#1e325c",
      "mentionHighlightBg": "#ffd470",
      "mentionHighlightLink": "#1b1d22",
      "newMessageSeparator": "#cc8f00",
      "onlineIndicator": "#3db887",
      "sidebarBg": "#1e325c",
      "sidebarHeaderBg": "#192a4d",
      "sidebarHeaderTextColor": "#ffffff",
      "sidebarTeamBarBg": "#162545",
      "sidebarText": "#ffffff",
      "sidebarTextActiveBorder": "#5d89ea",
      "sidebarTextActiveColor": "#ffffff",
      "sidebarTextHoverBg": "#28427b",
      "sidebarUnreadText": "#ffffff",
      "type": "Denim",
    }
  }
>
  <PluggableErrorBoundary
    key="PopoverSection1"
    pluginId=""
  >
    <ProfilePopoverPlugin
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#162545",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      webSocketClient={
        WebSocketClient {
          "closeCallback": null,
          "closeListeners": Set {},
          "conn": null,
          "connectFailCount": 0,
          "connectionId": "",
          "connectionUrl": null,
          "errorCallback": null,
          "errorListeners": Set {},
          "eventCallback": null,
          "firstConnectCallback": null,
          "firstConnectListeners": Set {},
          "messageListeners": Set {},
          "missedEventCallback": null,
          "missedMessageListeners": Set {},
          "postedAck": false,
          "reconnectCallback": null,
          "reconnectListeners": Set {},
          "responseCallbacks": Object {},
          "responseSequence": 1,
          "serverSequence": 0,
        }
      }
    >
      <span
        id="pluginId"
      >
        ProfilePopoverPlugin
      </span>
    </ProfilePopoverPlugin>
  </PluggableErrorBoundary>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with no extended component 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableName=""
  theme={
    Object {
      "awayIndicator": "#ffbc1f",
      "buttonBg": "#1c58d9",
      "buttonColor": "#ffffff",
      "centerChannelBg": "#ffffff",
      "centerChannelColor": "#3f4350",
      "codeTheme": "github",
      "dndIndicator": "#d24b4e",
      "errorTextColor": "#d24b4e",
      "linkColor": "#386fe5",
      "mentionBg": "#ffffff",
      "mentionBj": "#ffffff",
      "mentionColor": "#1e325c",
      "mentionHighlightBg": "#ffd470",
      "mentionHighlightLink": "#1b1d22",
      "newMessageSeparator": "#cc8f00",
      "onlineIndicator": "#3db887",
      "sidebarBg": "#1e325c",
      "sidebarHeaderBg": "#192a4d",
      "sidebarHeaderTextColor": "#ffffff",
      "sidebarTeamBarBg": "#162545",
      "sidebarText": "#ffffff",
      "sidebarTextActiveBorder": "#5d89ea",
      "sidebarTextActiveColor": "#ffffff",
      "sidebarTextHoverBg": "#28427b",
      "sidebarUnreadText": "#ffffff",
      "type": "Denim",
    }
  }
/>
`;

exports[`plugins/Pluggable should match snapshot with non-null pluggableId 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PopoverSection1": Array [
        Object {
          "component": [Function],
          "id": "",
          "pluginId": "",
        },
      ],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableId="pluggableId"
  pluggableName="PopoverSection1"
  theme={
    Object {
      "awayIndicator": "#ffbc1f",
      "buttonBg": "#1c58d9",
      "buttonColor": "#ffffff",
      "centerChannelBg": "#ffffff",
      "centerChannelColor": "#3f4350",
      "codeTheme": "github",
      "dndIndicator": "#d24b4e",
      "errorTextColor": "#d24b4e",
      "linkColor": "#386fe5",
      "mentionBg": "#ffffff",
      "mentionBj": "#ffffff",
      "mentionColor": "#1e325c",
      "mentionHighlightBg": "#ffd470",
      "mentionHighlightLink": "#1b1d22",
      "newMessageSeparator": "#cc8f00",
      "onlineIndicator": "#3db887",
      "sidebarBg": "#1e325c",
      "sidebarHeaderBg": "#192a4d",
      "sidebarHeaderTextColor": "#ffffff",
      "sidebarTeamBarBg": "#162545",
      "sidebarText": "#ffffff",
      "sidebarTextActiveBorder": "#5d89ea",
      "sidebarTextActiveColor": "#ffffff",
      "sidebarTextHoverBg": "#28427b",
      "sidebarUnreadText": "#ffffff",
      "type": "Denim",
    }
  }
/>
`;

exports[`plugins/Pluggable should match snapshot with null pluggableId 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PopoverSection1": Array [
        Object {
          "component": [Function],
          "id": "",
          "pluginId": "",
        },
      ],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableName="PopoverSection1"
  theme={
    Object {
      "awayIndicator": "#ffbc1f",
      "buttonBg": "#1c58d9",
      "buttonColor": "#ffffff",
      "centerChannelBg": "#ffffff",
      "centerChannelColor": "#3f4350",
      "codeTheme": "github",
      "dndIndicator": "#d24b4e",
      "errorTextColor": "#d24b4e",
      "linkColor": "#386fe5",
      "mentionBg": "#ffffff",
      "mentionBj": "#ffffff",
      "mentionColor": "#1e325c",
      "mentionHighlightBg": "#ffd470",
      "mentionHighlightLink": "#1b1d22",
      "newMessageSeparator": "#cc8f00",
      "onlineIndicator": "#3db887",
      "sidebarBg": "#1e325c",
      "sidebarHeaderBg": "#192a4d",
      "sidebarHeaderTextColor": "#ffffff",
      "sidebarTeamBarBg": "#162545",
      "sidebarText": "#ffffff",
      "sidebarTextActiveBorder": "#5d89ea",
      "sidebarTextActiveColor": "#ffffff",
      "sidebarTextHoverBg": "#28427b",
      "sidebarUnreadText": "#ffffff",
      "type": "Denim",
    }
  }
>
  <PluggableErrorBoundary
    key="PopoverSection1"
    pluginId=""
  >
    <ProfilePopoverPlugin
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#162545",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      webSocketClient={
        WebSocketClient {
          "closeCallback": null,
          "closeListeners": Set {},
          "conn": null,
          "connectFailCount": 0,
          "connectionId": "",
          "connectionUrl": null,
          "errorCallback": null,
          "errorListeners": Set {},
          "eventCallback": null,
          "firstConnectCallback": null,
          "firstConnectListeners": Set {},
          "messageListeners": Set {},
          "missedEventCallback": null,
          "missedMessageListeners": Set {},
          "postedAck": false,
          "reconnectCallback": null,
          "reconnectListeners": Set {},
          "responseCallbacks": Object {},
          "responseSequence": 1,
          "serverSequence": 0,
        }
      }
    >
      <span
        id="pluginId"
      >
        ProfilePopoverPlugin
      </span>
    </ProfilePopoverPlugin>
  </PluggableErrorBoundary>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with valid pluggableId 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PopoverSection1": Array [
        Object {
          "component": [Function],
          "id": "pluggableId",
          "pluginId": "",
        },
      ],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableId="pluggableId"
  pluggableName="PopoverSection1"
  theme={
    Object {
      "awayIndicator": "#ffbc1f",
      "buttonBg": "#1c58d9",
      "buttonColor": "#ffffff",
      "centerChannelBg": "#ffffff",
      "centerChannelColor": "#3f4350",
      "codeTheme": "github",
      "dndIndicator": "#d24b4e",
      "errorTextColor": "#d24b4e",
      "linkColor": "#386fe5",
      "mentionBg": "#ffffff",
      "mentionBj": "#ffffff",
      "mentionColor": "#1e325c",
      "mentionHighlightBg": "#ffd470",
      "mentionHighlightLink": "#1b1d22",
      "newMessageSeparator": "#cc8f00",
      "onlineIndicator": "#3db887",
      "sidebarBg": "#1e325c",
      "sidebarHeaderBg": "#192a4d",
      "sidebarHeaderTextColor": "#ffffff",
      "sidebarTeamBarBg": "#162545",
      "sidebarText": "#ffffff",
      "sidebarTextActiveBorder": "#5d89ea",
      "sidebarTextActiveColor": "#ffffff",
      "sidebarTextHoverBg": "#28427b",
      "sidebarUnreadText": "#ffffff",
      "type": "Denim",
    }
  }
>
  <PluggableErrorBoundary
    key="PopoverSection1pluggableId"
    pluginId=""
  >
    <ProfilePopoverPlugin
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#162545",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      webSocketClient={
        WebSocketClient {
          "closeCallback": null,
          "closeListeners": Set {},
          "conn": null,
          "connectFailCount": 0,
          "connectionId": "",
          "connectionUrl": null,
          "errorCallback": null,
          "errorListeners": Set {},
          "eventCallback": null,
          "firstConnectCallback": null,
          "firstConnectListeners": Set {},
          "messageListeners": Set {},
          "missedEventCallback": null,
          "missedMessageListeners": Set {},
          "postedAck": false,
          "reconnectCallback": null,
          "reconnectListeners": Set {},
          "responseCallbacks": Object {},
          "responseSequence": 1,
          "serverSequence": 0,
        }
      }
    >
      <span
        id="pluginId"
      >
        ProfilePopoverPlugin
      </span>
    </ProfilePopoverPlugin>
  </PluggableErrorBoundary>
</Pluggable>
`;
